--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "muuri": "^0.7.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.8.1",
     "react-scripts": "3.0.1",
     "react-tippy": "^1.2.3",
     "web-animations-js": "^2.3.1"
